added catalogue section

--- a/index.html
+++ b/index.html
@@ -535,8 +535,457 @@
 				</div>
 			</div>
 		</div>
+        
+        <div class="content" id="sixthsection">
+			<h2>Catalogue and metadata</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+			</p>
+			<div class="nav nav-tabs" id="nav-tab" role="tablist">
+				  <button class="nav-link active" id="nav-catalogue-tab-metadata" data-bs-toggle="tab" data-bs-target="#nav-catalogue" type="button" role="tab" aria-controls="nav-catalogue" aria-selected="true">Catalogue</button>
+				  <button class="nav-link" id="nav-ds1-tab-metadata" data-bs-toggle="tab" data-bs-target="#nav-ds1" type="button" role="tab" aria-controls="nav-ds1" aria-selected="false">DS1</button>
+				  <button class="nav-link" id="nav-ds2-tab-metadata" data-bs-toggle="tab" data-bs-target="#nav-ds2" type="button" role="tab" aria-controls="nav-ds2" aria-selected="false">DS2</button>
+				  <button class="nav-link" id="nav-ds3-tab-metadata" data-bs-toggle="tab" data-bs-target="#nav-ds3" type="button" role="tab" aria-controls="nav-ds3" aria-selected="false">DS3</button>
+				  <button class="nav-link" id="nav-ds4-tab-metadata" data-bs-toggle="tab" data-bs-target="#nav-ds4" type="button" role="tab" aria-controls="nav-ds4" aria-selected="false">DS4</button>
+			</div>
+			  
+			<div class="tab-content" id="nav-tabContent">
+				<div class="tab-pane fade active show" id="nav-catalogue" role="tabpanel" aria-labelledby="nav-catalogue-tab-metadata">
+					<h3>Catalogue</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+					</p>
+					<table class="table metadata-table" id="catalogue-table">
+						<tbody>
+							<tr class="table-danger">
+								<td><strong>Title</strong></td>
+								<td>Digital Ethics Across Europe</td>
+							</tr>
+							<tr>
+								<td><strong>Description</strong></td>
+								<td>This catalogue contains datasets about LGBTQ+ comunity's treatement across the European Union</td>
+							</tr>
+							<tr class="table-danger">
+								<td><strong>Publisher</strong></td>
+								<td>Alisha Carol Hiscox, Giorgia Umana, Lukas Fintaras, Valentina Bertelli</td>
+							</tr>
+							<tr>
+								<td><strong>Issued</strong></td>
+								<td>20/01/2025</td>
+							</tr>
+							<tr  class="table-danger">
+								<td><strong>Modified</strong></td>
+								<td>20/01/2025</td>
+							</tr>
+							<tr>
+								<td><strong>Datasets</strong></td>
+								<td>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS1/Discrimination%20in%20the%20EU_sp535_volumeA.csv">DS1</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS2/discrimination.csv">DS2</a>,
+									<a href="">DS3</a>,
+									<a href="">DS4</a>
+								</td>
+							</tr>
+							<tr class="table-danger">
+								<td><strong>Homepage</strong></td>
+								<td>
+									<a href="https://digital-ethics-across-europe.github.io/DEAE/">Digital Ethics Across Europe</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>Language</strong></td>
+								<td>English</td>
+							</tr>
+							<tr class="table-danger">
+								<td><strong>Spatial</strong></td>
+								<td>European Union</td>
+							</tr>
+							<tr>
+								<td><strong>Licence</strong></td>
+								<td>
+									<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
+								</td>
+							</tr>
+							<tr class="table-danger">
+								<td><strong>Themes</strong></td>
+								<td>
+									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI">Population and society</a>,
+									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST">Justice, legal system and public safety</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>RDF assertion</strong></td>
+								<td>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/metadata/DEAE_catalog.ttl">Download DEAE_catalog.ttl</a>
+								</td>
+							</tr>
+					    </tbody>
+					</table>
+				</div>
+				<div class="tab-pane fade" id="nav-ds1" role="tabpanel" aria-labelledby="nav-ds1-tab-metadata">
+					<h3>DS1 - Public opinion about LGBTQ+</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+					</p>
+					<table class="table metadata-table" id="ds1-table">
+						<tbody>
+							<tr class="table-warning">
+								<td><strong>Title</strong></td>
+								<td>Public opinion about LGBTQ+</td>
+							</tr>
+							<tr>
+								<td><strong>Description</strong></td>
+								<td>This dataset contains data about public opinion about the LGBTQ+ comunity in the European Union</td>
+							</tr>
+							<tr class="table-warning">
+								<td><strong>Creator</strong></td>
+								<td>Giorgia Umana</td>
+							</tr>
+							<tr>
+								<td><strong>Issued</strong></td>
+								<td>20/01/2025</td>
+							</tr>
+							<tr  class="table-warning">
+								<td><strong>Modified</strong></td>
+								<td>20/01/2025</td>
+							</tr>
+							<tr>
+								<td><strong>Source</strong></td>
+								<td>
+									<a href="https://europa.eu/eurobarometer/surveys/detail/2972">Eurobarometer - Discrimination in the European Union</a>
+								</td>
+							</tr>
+							<tr class="table-warning">
+								<td><strong>Landing page</strong></td>
+								<td>
+									<a href="https://digital-ethics-across-europe.github.io/DEAE/">Digital Ethics Across Europe</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>Language</strong></td>
+								<td>English</td>
+							</tr>
+							<tr class="table-warning">
+								<td><strong>Spatial</strong></td>
+								<td>European Union</td>
+							</tr>
+							<tr>
+								<td><strong>Licence</strong></td>
+								<td>
+									<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
+								</td>
+							</tr>
+							<tr class="table-warning">
+								<td><strong>Temporal coverage</strong></td>
+								<td>2023</td>
+							</tr>
+							<tr>
+								<td><strong>Themes</strong></td>
+								<td>
+									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI">Population and society</a>,
+									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST">Justice, legal system and public safety</a>
+								</td>
+							</tr>
+							<tr class="table-warning">
+								<td><strong>Subjects</strong></td>
+								<td>
+									<a href="http://eurovoc.europa.eu/6231">Discrimination based on sexual oriantation</a>,
+									<a href="http://eurovoc.europa.eu/2152">Public opinion</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>Keywords</strong></td>
+								<td>LGBTQ+ comunity, equality, society</td>
+							</tr>
+							<tr class="table-warning">
+								<td><strong>Distribution</strong></td>
+								<td>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS1/Discrimination_in_the_EU_sp535_volumeA.csv">Download CSV</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS1/Discrimination_in_the_EU_sp535_volumeA.json">Dowload JSON</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>RDF assertion</strong></td>
+								<td>
+									<a href="metadata/DS1.ttl" download="DS1.ttl">Download DS1.ttl</a>
+								</td>
+							</tr>
+					    </tbody>
+					</table>
+				</div>
+				<div class="tab-pane fade" id="nav-ds2" role="tabpanel" aria-labelledby="nav-ds2-tab-metadata">
+					<h3>DS2 - LGBTQ+ discrimination</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+					</p>
+					<table class="table metadata-table" id="ds2-table">
+						<tbody>
+							<tr class="table-success">
+								<td><strong>Title</strong></td>
+								<td>LGBTQ+ discrimination</td>
+							</tr>
+							<tr>
+								<td><strong>Description</strong></td>
+								<td>This dataset contains data about discrimination against LGBTQ+ comunity members in European Union countries in different areas of life: emplyment, healthcare and educational institutions</td>
+							</tr>
+							<tr class="table-success">
+								<td><strong>Creator</strong></td>
+								<td>Valentina Bertelli</td>
+							</tr>
+							<tr>
+								<td><strong>Issued</strong></td>
+								<td>20/01/2025</td>
+							</tr>
+							<tr  class="table-success">
+								<td><strong>Modified</strong></td>
+								<td>20/01/2025</td>
+							</tr>
+							<tr>
+								<td><strong>Source</strong></td>
+								<td>
+									<a href="https://fra.europa.eu/en/publications-and-resources/data-and-maps/2024/eu-lgbtiq-survey-iii">European Union Agency for Fundamental Rights - EU LGBTIQ Survey III</a>
+								</td>
+							</tr>
+							<tr class="table-success">
+								<td><strong>Landing page</strong></td>
+								<td>
+									<a href="https://digital-ethics-across-europe.github.io/DEAE/">Digital Ethics Across Europe</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>Language</strong></td>
+								<td>English</td>
+							</tr>
+							<tr class="table-success">
+								<td><strong>Spatial</strong></td>
+								<td>European Union</td>
+							</tr>
+							<tr>
+								<td><strong>Licence</strong></td>
+								<td>
+									<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
+								</td>
+							</tr>
+							<tr class="table-success">
+								<td><strong>Temporal coverage</strong></td>
+								<td>2023</td>
+							</tr>
+							<tr>
+								<td><strong>Themes</strong></td>
+								<td>
+									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI">Population and society</a>,
+									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST">Justice, legal system and public safety</a>
+								</td>
+							</tr>
+							<tr class="table-success">
+								<td><strong>Subjects</strong></td>
+								<td>
+									<a href="http://eurovoc.europa.eu/6231">Discrimination based on sexual oriantation</a>,
+									<a href="http://eurovoc.europa.eu/538">Fundamental rights</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>Keywords</strong></td>
+								<td>LGBTQ+ comunity, equality, society</td>
+							</tr>
+							<tr class="table-success">
+								<td><strong>Distribution</strong></td>
+								<td>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS2/discrimination.csv">Download CSV</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS2/discrimination.json">Dowload JSON</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>RDF assertion</strong></td>
+								<td>
+									<a href="metadata/DS2.ttl" download="DS2.ttl">Download DS2.ttl</a>
+								</td>
+							</tr>
+					    </tbody>
+					</table>
+				</div>
+				<div class="tab-pane fade" id="nav-ds3" role="tabpanel" aria-labelledby="nav-ds3-tab-metadata">
+					<h3>DS3 - Marriage and parenting regulations 2024</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+					</p>
+					<table class="table metadata-table" id="ds3-table">
+						<tbody>
+							<tr class="table-primary">
+								<td><strong>Title</strong></td>
+								<td>Marriage and parenting regulations 2024</td>
+							</tr>
+							<tr>
+								<td><strong>Description</strong></td>
+								<td>This dataset contains data about the state of marriage and parenting regolamentation for same sex couples in European Union countries in the year 2024</td>
+							</tr>
+							<tr class="table-primary">
+								<td><strong>Creator</strong></td>
+								<td>.......</td>
+							</tr>
+							<tr>
+								<td><strong>Issued</strong></td>
+								<td>20/01/2025</td>
+							</tr>
+							<tr  class="table-primary">
+								<td><strong>Modified</strong></td>
+								<td>20/01/2025</td>
+							</tr>
+							<tr>
+								<td><strong>Source</strong></td>
+								<td>
+									<a href="https://rainbowmap.ilga-europe.org/categories/family/">Rainbow Map</a>
+								</td>
+							</tr>
+							<tr class="table-primary">
+								<td><strong>Landing page</strong></td>
+								<td>
+									<a href="https://digital-ethics-across-europe.github.io/DEAE/">Digital Ethics Across Europe</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>Language</strong></td>
+								<td>English</td>
+							</tr>
+							<tr class="table-primary">
+								<td><strong>Spatial</strong></td>
+								<td>European Union</td>
+							</tr>
+							<tr>
+								<td><strong>Licence</strong></td>
+								<td>
+									<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
+								</td>
+							</tr>
+							<tr class="table-primary">
+								<td><strong>Temporal coverage</strong></td>
+								<td>2024</td>
+							</tr>
+							<tr>
+								<td><strong>Themes</strong></td>
+								<td>
+									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI">Population and society</a>,
+									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST">Justice, legal system and public safety</a>
+								</td>
+							</tr>
+							<tr class="table-primary">
+								<td><strong>Subjects</strong></td>
+								<td>
+									<a href="http://eurovoc.europa.eu/c_25d12753">Rainbow families</a>,
+									<a href="http://eurovoc.europa.eu/1818">Marriage</a>,
+									<a href="http://eurovoc.europa.eu/688">Equal treatement</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>Keywords</strong></td>
+								<td>LGBTQ+ comunity, equality, society, marriage, parenting</td>
+							</tr>
+							<tr class="table-primary">
+								<td><strong>Distribution</strong></td>
+								<td>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS3/...........csv">Download CSV</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS3/............json">Dowload JSON</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>RDF assertion</strong></td>
+								<td>
+									<a href="metadata/DS3.ttl" download="DS3.ttl">Download DS3.ttl</a>
+								</td>
+							</tr>
+					    </tbody>
+					</table>
+				</div>
+				<div class="tab-pane fade" id="nav-ds4" role="tabpanel" aria-labelledby="nav-ds4-tab-metadata">
+					<h3>DS4 - Marriage and parenting regulations 1989-2016</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+					</p>
+					<table class="table metadata-table" id="ds4-table">
+						<tbody>
+							<tr class="table-purple">
+								<td><strong>Title</strong></td>
+								<td>Marriage and parenting regulations 1989-2016</td>
+							</tr>
+							<tr>
+								<td><strong>Description</strong></td>
+								<td>This dataset contains data about the state of marriage and parenting regolamentation for samesex couples in European Union countries from the year 1989 until the year 2016</td>
+							</tr>
+							<tr class="table-purple">
+								<td><strong>Creator</strong></td>
+								<td>Lukas Firantas</td>
+							</tr>
+							<tr>
+								<td><strong>Issued</strong></td>
+								<td>20/01/2025</td>
+							</tr>
+							<tr  class="table-purple">
+								<td><strong>Modified</strong></td>
+								<td>20/01/2025</td>
+							</tr>
+							<tr>
+								<td><strong>Source</strong></td>
+								<td>
+									<a href="https://www.lawsandfamilies.eu/en/legal-project/interactive-database/">Database Laws and Families</a>
+								</td>
+							</tr>
+							<tr class="table-purple">
+								<td><strong>Landing page</strong></td>
+								<td>
+									<a href="https://digital-ethics-across-europe.github.io/DEAE/">Digital Ethics Across Europe</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>Language</strong></td>
+								<td>English</td>
+							</tr>
+							<tr class="table-purple">
+								<td><strong>Spatial</strong></td>
+								<td>European Union</td>
+							</tr>
+							<tr>
+								<td><strong>Licence</strong></td>
+								<td>
+									<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
+								</td>
+							</tr>
+							<tr class="table-purple">
+								<td><strong>Temporal coverage</strong></td>
+								<td>1989 - 2016</td>
+							</tr>
+							<tr>
+								<td><strong>Themes</strong></td>
+								<td>
+									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI">Population and society</a>,
+									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST">Justice, legal system and public safety</a>
+								</td>
+							</tr>
+							<tr class="table-purple">
+								<td><strong>Subjects</strong></td>
+								<td>
+									<a href="http://eurovoc.europa.eu/c_25d12753">Rainbow families</a>,
+									<a href="http://eurovoc.europa.eu/1818">Marriage</a>,
+									<a href="http://eurovoc.europa.eu/688">Equal treatement</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>Keywords</strong></td>
+								<td>LGBTQ+ comunity, equality, society, marriage, parenting</td>
+							</tr>
+							<tr class="table-purple">
+								<td><strong>Distribution</strong></td>
+								<td>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS4/...........csv">Download CSV</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS4/............json">Dowload JSON</a>
+								</td>
+							</tr>
+							<tr>
+								<td><strong>RDF assertion</strong></td>
+								<td>
+									<a href="metadata/DS4.ttl" download="DS4.ttl">Download DS4.ttl</a>
+								</td>
+							</tr>
+					    </tbody>
+					</table>
+				</div>
+			</div>
+		</div>
 
-		<div class="content" id="sixthsection">
+		<div class="content" id="seventsection">
 			<h2>About Us</h2>
 			<p> We are a passionate team of digital innovators and advocates, dedicated to exploring the intersections
 				of technology, ethics, and social equality. Our focus is on leveraging data to uncover systemic
