--- a/index.html
+++ b/index.html
@@ -1320,7 +1320,7 @@
 		<div class="textSection">
 			<div class="country-info">
 				<div id="countryDetails">
-					<h3>Country Details:</h3><h3 id="countryName"></h3>
+					<h3>Country Details</h3><h3 id="countryName"></h3>
 					<table id="infoTable" class="table table-striped">
 					  <thead>
 						<tr>
@@ -1332,7 +1332,7 @@
 						
 					  </tbody>
 					</table>
-					<p id="countryInfo"></p>
+					<h3 id="countryInfo"></h3>
 				  </div>
 			
 			</div>
