--- a/index.html
+++ b/index.html
@@ -1793,6 +1793,11 @@
 	
 </div>
   
+<div><p> <br> <br> </p></div>
+
+
+
+
 	<div class="content" id="sixthsection">
 		<h2>About Us</h2>
 		<p> We are a passionate team of digital innovators and advocates, dedicated to exploring the intersections
