Sustainability of the Open Data Analysis Done
Its done but kinda looks ugly....

--- a/index.html
+++ b/index.html
@@ -1846,22 +1846,75 @@
 				<div class="card">
 					<p><strong>Valentina Bertelli</strong></p>
 					<p>Database Analysed: EU LGBTIQ Survey III</p>
-					<p>Valentina made substantial contributions to the website's design and functionality, ensuring its smooth operation. She also identified and analyzed the EU LGBTIQ Survey III dataset, skillfully integrating and mashing it up with other datasets to enhance the project's depth and comprehensiveness.</p>
+					<p>Valentina made substantial contributions to the website's design and functionality,
+						ensuring its smooth operation. She also identified and analyzed the EU LGBTIQ Survey III dataset,
+						skillfully integrating and mashing it up with other datasets to enhance the project's depth and comprehensiveness.</p>
 				</div>
 				<div class="card">
 					<p><strong>Alisha Carol Hiscox</strong></p>
 					<p>Database Analysed: Rainbow Europe</p>
-					<p>Alisha played a key role in identifying databases that would support our project's research questions. She thoroughly analyzed the Rainbow Europe dataset, which provided critical insights into the stark discrimination divide between Eastern and Western European Union countries.</p>
+					<p>Alisha played a key role in identifying databases that would support our project's research questions.
+						She thoroughly analyzed the Rainbow Europe dataset,
+						which provided critical insights into the stark discrimination divide between Eastern and Western European Union countries.</p>
 				</div>
 				<div class="card">
 					<p><strong>Lukas Firantas</strong></p>
 					<p>Database Analysed: LawsAndFamilies</p>
-					<p>Lukas contributed by identifying several useful datasets that highlighted the clear divide between Eastern and Western European Union countries. Additionally, he provided support in the development and functionality of the website as well as helped set out project topic.</p>
+					<p>Lukas contributed by identifying several useful datasets that highlighted the clear divide between Eastern and Western European Union countries.
+						Additionally, he provided support in the development and functionality of the website as well as helped set out project topic.</p>
 				</div>
 			</div>
 		<p> Together, we are united by a shared mission: to use the power of open data and ethical research to shed light on the
 			inequalities faced by marginalized communities and  potentially contribute to building a more equitable digital and social landscape.</p>
 	</div>
+
+	<div><p> <br> </p></div>
+	<div class="content">
+		<h2>Sustainability of the Open Data Analysis</h2>
+		<p>The sustainability of our analysis lies in the continued accessibility, relevance, and responsible use of the datasets employed. By examining the experiences of LGBTQ individuals across Europe through datasets from the LawsandFamilies Database, the Rainbow Map by ILGA-Europe, the EU LGBTIQ Survey III, and the Discrimination in the European Union Survey (Eurobarometer), we offer a robust analysis of discrimination disparities between Eastern and Western Europe. This section outlines how these datasets contribute to long-term societal, policy, and data sustainability goals.</p>
+		<p><br></p>
+
+		<h3>1. Relevance and Longevity of the Datasets</h3>
+		<p>The selected datasets provide complementary perspectives on LGBTQ rights, legal frameworks, and social attitudes:</p>
+        <ul>
+         <li><b>LawsandFamilies Database:</b> A legal reference capturing variations in family and equality laws across Europe, facilitating longitudinal analysis of legal progress or stagnation.</li>
+    	 <li><b>Rainbow Map (ILGA-Europe):</b> A dynamic scoring system updated annually, offering a clear comparative view of LGBTQ rights protections across countries, ensuring consistent and long-term relevance.</li>
+    	 <li><b>EU LGBTIQ Survey III:</b> By collecting first-hand accounts of discrimination and societal attitudes, this dataset bridges the gap between legal provisions and lived realities, offering insights into regional disparities.</li>
+    	 <li><b>Discrimination in the European Union Survey (Eurobarometer):</b> This dataset provides valuable context on societal perceptions and attitudes towards discrimination across Europe, including LGBTQ discrimination, supplementing the other datasets with a broader societal lens.</li>
+        </ul>
+        <p>Together, these datasets support sustainable open data practices by maintaining transparent methodologies, regular updates, and open accessibility to researchers, policymakers, and advocates.</p>
+
+        <h3>2. Social Sustainability: Advancing Inclusive Policies</h3>
+        <p>The project underscores how open data can drive evidence-based policymaking to combat discrimination. By comparing Eastern and Western Europe, we highlight disparities that demand attention:</p>
+        <ul>
+          <li><b>Eastern Europe:</b> Data from the Rainbow Map and EU LGBTIQ Survey III indicate lower legal protections and higher reported discrimination rates. These findings align with Eurobarometer data, which reflects less societal acceptance in many Eastern European countries.</li>
+          <li><b>Western Europe:</b> Higher Rainbow Map scores and more positive societal perceptions in the Eurobarometer data suggest stronger legal protections and greater societal acceptance, serving as benchmarks for improvement.</li>
+        </ul>
+        <p>This alignment across multiple datasets strengthens the case for targeted reforms and inclusive policies, contributing to long-term social sustainability by fostering equality and reducing discrimination.</p>
+
+        <h3>3. Technological and Ethical Sustainability</h3>
+        <p>The project adheres to best practices for open data use, ensuring technological and ethical sustainability:</p>
+        <ul>
+          <li><b>Transparency and Replicability:</b> All data sources and analytical processes are documented, enabling others to replicate and expand on our findings.</li>
+    	  <li><b>Privacy Protection:</b> Sensitive datasets, such as the EU LGBTIQ Survey III, are used in compliance with privacy-by-design principles, ensuring that individual responses remain anonymized and securely managed.</li>
+        </ul>
+        <p>By responsibly leveraging open data, the project upholds ethical standards while ensuring its methods and findings are sustainable for future use.</p>
+
+        <h3>4. Environmental Sustainability in Data Use</h3>
+        <p>While not directly tied to the datasets, we minimized our environmental footprint during the analysis by:</p>
+        <ul>
+	     <li>Employing digital tools for data analysis and visualization.</li>
+	     <li>Sharing findings through digital platforms rather than printed materials.</li>
+        </ul>
+
+		<p><br></p>
+        <h3>Conclusion</h3>
+        <p>By integrating the <b>LawsandFamilies Database</b>, <b>Rainbow Map</b>, <b>EU LGBTIQ Survey III</b>, and the <b>Discrimination in the European Union Survey</b>, this analysis not only highlights disparities in LGBTQ rights and discrimination across Europe but also promotes sustainable practices in open data usage. The accessibility, ongoing updates, and complementary insights from these datasets enable long-term contributions to data-driven advocacy, policy-making, and public awareness, creating a foundation for lasting social impact.</p>
+	
+	</div>
+
+
+
 </main>
 </body>
 <footer>
